@@ -34,7 +34,7 @@ public class CaseDataMiamElementsMapper {
     private CaseDataMiamElementsMapper() {
     }
 
-    public static void updateMiamElementsForCaseData(CaseData.CaseDataBuilder caseDataBuilder,
+    public static void updateMiamElementsForCaseData(CaseData.CaseDataBuilder<?,?> caseDataBuilder,
                                                      C100RebuildMiamElements c100RebuildMiamElements) {
 
         List<MiamPreviousAttendanceChecklistEnum> previousAttendanceChecklistEnums =
@@ -80,10 +80,10 @@ public class CaseDataMiamElementsMapper {
         miamNotAttendingReasons.remove("canNotAccessMediator");
 
         List<String> mediatorList = Stream.of(miamNotAttendingReasons, noMediatorAccessSubfields)
-                .flatMap(Collection::stream).collect(Collectors.toList());
+                .flatMap(Collection::stream).toList();
 
         return mediatorList.stream().map(value -> MiamNotAttendingReasonsMapperEnum.valueOf(value).getValue())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<MiamPreviousAttendanceChecklistEnum> buildMiamPreviousAttendanceChecklist(C100RebuildMiamElements c100RebuildMiamElements) {
@@ -94,7 +94,7 @@ public class CaseDataMiamElementsMapper {
             return Collections.emptyList();
         }
         return previousAttendance.stream().map(value -> MiamPreviousAttendanceMapperEnum.valueOf(value).getValue())
-                .collect(Collectors.toList()).stream().distinct().collect(Collectors.toList());
+                .toList().stream().distinct().toList();
 
     }
 
@@ -106,7 +106,7 @@ public class CaseDataMiamElementsMapper {
             return Collections.emptyList();
         }
         return miamUrgencies.stream().map(value -> MiamUrgencyMapperEnum.valueOf(value).getValue())
-                .collect(Collectors.toList()).stream().distinct().collect(Collectors.toList());
+                .toList().stream().distinct().toList();
     }
 
     private static List<MiamChildProtectionConcernChecklistEnum>
@@ -118,7 +118,7 @@ public class CaseDataMiamElementsMapper {
             return Collections.emptyList();
         }
         return childProtectionEvidences.stream().map(value -> ChildProtectionMapperEnum.valueOf(value).getValue())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<MiamDomesticViolenceChecklistEnum> buildMiamDomesticViolenceChecklist(C100RebuildMiamElements
@@ -157,7 +157,7 @@ public class CaseDataMiamElementsMapper {
         }
 
         return domesticAbusesList.stream().map(value -> DomesticAbuseMapperEnum.valueOf(value).getValue())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<MiamExemptionsChecklistEnum> buildMiamExemptionsCheckList(C100RebuildMiamElements c100RebuildMiamElements) {
@@ -168,7 +168,7 @@ public class CaseDataMiamElementsMapper {
             return Collections.emptyList();
         }
         return nonAttendanceReasons.stream().map(value -> MiamExemptionMapperEnum.valueOf(value).getValue())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static Document buildDocument(uk.gov.hmcts.reform.prl.models.c100rebuild.Document maimDocument) {
