@@ -36,12 +36,9 @@ import static uk.gov.hmcts.reform.prl.enums.Gender.other;
 @Component
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class ApplicationsTabServiceHelper {
-
-    @Autowired
-    ObjectMapper objectMapper;
+    private final ObjectMapper objectMapper;
 
     public List<Element<OtherPersonInTheCaseRevised>> getOtherPeopleInTheCaseRevisedTable(CaseData caseData) {
-        log.info("-->getOtherPeopleInTheCaseRevisedTable()--->start");
         Optional<List<Element<PartyDetails>>> otherPeopleCheck = ofNullable(caseData.getOtherPartyInTheCaseRevised());
         List<Element<OtherPersonInTheCaseRevised>> otherPersonsInTheCase = new ArrayList<>();
 
@@ -51,15 +48,18 @@ public class ApplicationsTabServiceHelper {
             otherPersonsInTheCase.add(other);
             return otherPersonsInTheCase;
         }
-        List<PartyDetails> otherPeople = caseData.getOtherPartyInTheCaseRevised().stream().map(Element::getValue).collect(Collectors.toList());
+        List<PartyDetails> otherPeople = caseData.getOtherPartyInTheCaseRevised().stream().map(Element::getValue).toList();
         otherPeople = maskConfidentialDetails(otherPeople);
-        for (PartyDetails p : otherPeople) {
-            OtherPersonInTheCaseRevised other = objectMapper.convertValue(p, OtherPersonInTheCaseRevised.class);
+        for (PartyDetails currentOtherPerson : otherPeople) {
+            OtherPersonInTheCaseRevised otherPerson = objectMapper.convertValue(currentOtherPerson, OtherPersonInTheCaseRevised.class);
+
             Element<OtherPersonInTheCaseRevised> wrappedPerson = Element.<OtherPersonInTheCaseRevised>builder()
-                .value(other).build();
+                .value(otherPerson.toBuilder()
+                           .gender(otherPerson.getGender() != null
+                                       ? Gender.getDisplayedValueFromEnumString(otherPerson.getGender()).getDisplayedValue() : null)
+                           .build()).build();
             otherPersonsInTheCase.add(wrappedPerson);
         }
-        log.info("-->getOtherPeopleInTheCaseRevisedTable()---> end");
         return otherPersonsInTheCase;
     }
 
@@ -67,7 +67,6 @@ public class ApplicationsTabServiceHelper {
 
 
     public List<Element<ChildDetailsRevised>> getChildRevisedDetails(CaseData caseData) {
-        log.info("-->getChildRevisedDetails()--->start");
         Optional<List<Element<uk.gov.hmcts.reform.prl.models.complextypes.ChildDetailsRevised>>> childElementsCheck =
             ofNullable(caseData.getNewChildDetails());
         List<Element<ChildDetailsRevised>> childFinalList = new ArrayList<>();
@@ -80,13 +79,12 @@ public class ApplicationsTabServiceHelper {
         List<uk.gov.hmcts.reform.prl.models.complextypes.ChildDetailsRevised> childList =
             caseData.getNewChildDetails().stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
         for (uk.gov.hmcts.reform.prl.models.complextypes.ChildDetailsRevised child : childList) {
             ChildDetailsRevised c = getChildDetailsRevised(child);
             Element<ChildDetailsRevised> res = Element.<ChildDetailsRevised>builder().value(c).build();
             childFinalList.add(res);
         }
-        log.info("getChildRevisedDetails()----> end");
         return childFinalList;
     }
 
@@ -123,7 +121,7 @@ public class ApplicationsTabServiceHelper {
         }
         List<ChildrenAndApplicantRelation> currentApplicants = caseData.getRelations().getChildAndApplicantRelations().stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
 
         for (ChildrenAndApplicantRelation applicant : currentApplicants) {
             ChildAndApplicantRelation a = objectMapper.convertValue(applicant, ChildAndApplicantRelation.class);
@@ -149,7 +147,7 @@ public class ApplicationsTabServiceHelper {
         }
         List<ChildrenAndRespondentRelation> currentApplicants = caseData.getRelations().getChildAndRespondentRelations().stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
         for (ChildrenAndRespondentRelation respondent : currentApplicants) {
             ChildAndRespondentRelation a = objectMapper.convertValue(respondent, ChildAndRespondentRelation.class);
             Element<ChildAndRespondentRelation> app = Element.<ChildAndRespondentRelation>builder().value(a).build();
@@ -174,7 +172,7 @@ public class ApplicationsTabServiceHelper {
         }
         List<ChildrenAndOtherPeopleRelation> currentApplicants = caseData.getRelations().getChildAndOtherPeopleRelations().stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
 
         for (ChildrenAndOtherPeopleRelation otherPeople : currentApplicants) {
             ChildAndOtherPeopleRelation a = objectMapper.convertValue(otherPeople, ChildAndOtherPeopleRelation.class);
@@ -215,7 +213,7 @@ public class ApplicationsTabServiceHelper {
         }
 
         List<uk.gov.hmcts.reform.prl.models.complextypes.OtherChildrenNotInTheCase> otherPeople =
-            caseData.getChildrenNotInTheCase().stream().map(Element::getValue).collect(Collectors.toList());
+            caseData.getChildrenNotInTheCase().stream().map(Element::getValue).toList();
 
         for (uk.gov.hmcts.reform.prl.models.complextypes.OtherChildrenNotInTheCase p : otherPeople) {
             OtherChildrenNotInTheCase other = objectMapper.convertValue(p, OtherChildrenNotInTheCase.class);
