@@ -23,9 +23,15 @@ import uk.gov.hmcts.reform.prl.models.caseinvite.CaseInvite;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
 import uk.gov.hmcts.reform.prl.models.complextypes.WithdrawApplication;
 import uk.gov.hmcts.reform.prl.models.complextypes.citizen.User;
+import uk.gov.hmcts.reform.prl.models.complextypes.citizen.documents.UploadedDocuments;
+import uk.gov.hmcts.reform.prl.models.documents.Document;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
+import uk.gov.hmcts.reform.prl.models.serviceofapplication.CitizenSos;
+import uk.gov.hmcts.reform.prl.models.serviceofapplication.StatementOfService;
+import uk.gov.hmcts.reform.prl.models.serviceofapplication.StmtOfServiceAddRecipient;
 import uk.gov.hmcts.reform.prl.models.user.UserInfo;
 import uk.gov.hmcts.reform.prl.repositories.CaseRepository;
+import uk.gov.hmcts.reform.prl.services.RoleAssignmentService;
 import uk.gov.hmcts.reform.prl.services.SystemUserService;
 import uk.gov.hmcts.reform.prl.services.noticeofchange.NoticeOfChangePartiesService;
 import uk.gov.hmcts.reform.prl.utils.CaseUtils;
@@ -37,7 +43,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static org.apache.commons.collections.MapUtils.isNotEmpty;
@@ -49,6 +54,7 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.FL401_APPLICANTS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.FL401_RESPONDENTS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.JURISDICTION;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V2;
 import static uk.gov.hmcts.reform.prl.enums.CaseEvent.CITIZEN_CASE_SUBMIT;
 import static uk.gov.hmcts.reform.prl.enums.CaseEvent.CITIZEN_CASE_SUBMIT_WITH_HWF;
 import static uk.gov.hmcts.reform.prl.enums.YesOrNo.Yes;
@@ -64,33 +70,21 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.wrapElements;
 @Service
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class CaseService {
-
     public static final String LINK_CASE = "linkCase";
     public static final String INVALID = "Invalid";
     public static final String VALID = "Valid";
     public static final String LINKED = "Linked";
     public static final String YES = "Yes";
     public static final String CASE_INVITES = "caseInvites";
-    @Autowired
     private final CoreCaseDataApi coreCaseDataApi;
-
-    @Autowired
     private final CaseRepository caseRepository;
-
     private final IdamClient idamClient;
-
-    @Autowired
     private final ObjectMapper objectMapper;
-
-    @Autowired
     private final SystemUserService systemUserService;
-
-    @Autowired
     private final CaseDataMapper caseDataMapper;
-
     private final CcdCoreCaseDataService coreCaseDataService;
-
     private final NoticeOfChangePartiesService noticeOfChangePartiesService;
+    private final RoleAssignmentService roleAssignmentService;
     private static final String INVALID_CLIENT = "Invalid Client";
 
     public CaseDetails updateCase(CaseData caseData, String authToken, String s2sToken,
@@ -113,6 +107,7 @@ public class CaseService {
             CaseData updatedCaseData = caseDataMapper
                 .buildUpdatedCaseData(caseData.toBuilder().userInfo(wrapElements(userInfo))
                                           .courtName(C100_DEFAULT_COURT_NAME)
+                                          .taskListVersion(TASK_LIST_VERSION_V2)
                                           .build());
             return caseRepository.updateCase(authToken, caseId, updatedCaseData, CaseEvent.fromValue(eventId));
         }
@@ -127,9 +122,13 @@ public class CaseService {
         CaseData caseData = CaseUtils.getCaseData(caseDetails, objectMapper);
         PartyDetails partyDetails = updateCaseData.getPartyDetails();
         PartyEnum partyType = updateCaseData.getPartyType();
+        if (CaseEvent.CITIZEN_STATEMENT_OF_SERVICE.getValue().equalsIgnoreCase(eventId)) {
+            eventId = CaseEvent.CITIZEN_INTERNAL_CASE_UPDATE.getValue();
+            handleCitizenStatementOfService(caseData, partyDetails, partyType);
+        }
         if (null != partyDetails.getUser()) {
             if (C100_CASE_TYPE.equalsIgnoreCase(updateCaseData.getCaseTypeOfApplication())) {
-                updatingPartyDetailsCa(caseData, partyDetails, partyType);
+                caseData = updatingPartyDetailsCa(caseData, partyDetails, partyType);
             } else {
                 caseData = getFlCaseData(caseData, partyDetails, partyType);
             }
@@ -138,6 +137,67 @@ public class CaseService {
         } else {
             throw (new RuntimeException(INVALID_CLIENT));
         }
+    }
+
+    private CaseData handleCitizenStatementOfService(CaseData caseData,PartyDetails partyDetails, PartyEnum partyType) {
+        CitizenSos citizenSos = partyDetails.getCitizenSosObject();
+        StmtOfServiceAddRecipient sosObject = StmtOfServiceAddRecipient.builder()
+            .citizenPartiesServedList(getPartyNames(citizenSos.getPartiesServed(), caseData, partyType))
+            .citizenPartiesServedDate(citizenSos.getPartiesServedDate())
+            .citizenSosDocs(getSosDocs(
+                citizenSos.getCitizenSosDocs(),
+                caseData.getDocumentManagementDetails().getCitizenUploadQuarantineDocsList()
+            ))
+            .build();
+        if (caseData.getStatementOfService().getStmtOfServiceAddRecipient() != null) {
+            List<Element<StmtOfServiceAddRecipient>> sosList = caseData.getStatementOfService().getStmtOfServiceAddRecipient();
+            List<Element<StmtOfServiceAddRecipient>> mutableList = new ArrayList<>(sosList);
+            mutableList.add(element(sosObject));
+            caseData.setStatementOfService(StatementOfService.builder()
+                                               .stmtOfServiceAddRecipient(mutableList)
+                                               .build());
+        } else {
+            caseData
+                .setStatementOfService(StatementOfService.builder()
+                                           .stmtOfServiceAddRecipient(List.of(element(sosObject)))
+                                           .build());
+        }
+        return caseData;
+    }
+
+    private String getPartyNames(String parties, CaseData caseData, PartyEnum partyType) {
+        List<String> servedParties = new ArrayList<>();
+        if (parties != null) {
+            for (String partyId : parties.split(",")) {
+                if (PartyEnum.applicant.equals(partyType)) {
+                    servedParties.add(getPartyNameById(partyId, caseData.getApplicants()));
+                } else if (PartyEnum.respondent.equals(partyType)) {
+                    servedParties.add(getPartyNameById(partyId, caseData.getRespondents()));
+                }
+            }
+        }
+        return servedParties.toString();
+    }
+
+    private String getPartyNameById(String partyId, List<Element<PartyDetails>> parties) {
+        for (Element<PartyDetails> party : parties) {
+            if (party.getId().toString().equalsIgnoreCase(partyId)) {
+                return party.getValue().getLabelForDynamicList();
+            }
+        }
+        return "";
+    }
+
+    private List<Document> getSosDocs(List<String> docIdList, List<Element<UploadedDocuments>> citizenDocs) {
+        List<Document> docs = new ArrayList<>();
+        if (citizenDocs != null) {
+            citizenDocs.forEach(doc -> {
+                if (docIdList.contains(doc.getId().toString())) {
+                    docs.add(doc.getValue().getCitizenDocument());
+                }
+            });
+        }
+        return docs;
     }
 
     private CaseData generateAnswersForNoc(CaseData caseData) {
@@ -168,9 +228,10 @@ public class CaseService {
         return caseData;
     }
 
-    private static void updatingPartyDetailsCa(CaseData caseData, PartyDetails partyDetails, PartyEnum partyType) {
+    private static CaseData updatingPartyDetailsCa(CaseData caseData, PartyDetails partyDetails, PartyEnum partyType) {
+        log.info("** PartyDetails ** {}", partyDetails);
         if (PartyEnum.applicant.equals(partyType)) {
-            List<Element<PartyDetails>> applicants = caseData.getApplicants();
+            List<Element<PartyDetails>> applicants = new ArrayList<>(caseData.getApplicants());
             applicants.stream()
                 .filter(party -> Objects.equals(
                     party.getValue().getUser().getIdamId(),
@@ -180,8 +241,9 @@ public class CaseService {
                 .ifPresent(party ->
                                applicants.set(applicants.indexOf(party), element(party.getId(), partyDetails))
                 );
+            caseData = caseData.toBuilder().applicants(applicants).build();
         } else if (PartyEnum.respondent.equals(partyType)) {
-            List<Element<PartyDetails>> respondents = caseData.getRespondents();
+            List<Element<PartyDetails>> respondents = new ArrayList<>(caseData.getRespondents());
             respondents.stream()
                 .filter(party -> Objects.equals(
                     party.getValue().getUser().getIdamId(),
@@ -191,7 +253,9 @@ public class CaseService {
                 .ifPresent(party ->
                                respondents.set(respondents.indexOf(party), element(party.getId(), partyDetails))
                 );
+            caseData = caseData.toBuilder().respondents(respondents).build();
         }
+        return caseData;
     }
 
 
@@ -213,7 +277,7 @@ public class CaseService {
         return caseDetails
             .stream()
             .map(caseDetail -> CaseUtils.getCaseData(caseDetail, objectMapper))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<CaseDetails> performSearch(String authToken, UserDetails user, Map<String, String> searchCriteria,
@@ -354,7 +418,7 @@ public class CaseService {
             .stream()
             .map(Element::getValue)
             .filter(x -> accessCode.equals(x.getAccessCode()))
-            .collect(Collectors.toList());
+            .toList();
 
         if (!matchingCaseInvite.isEmpty()) {
             accessCodeStatus = VALID;
@@ -392,4 +456,7 @@ public class CaseService {
         return caseRepository.updateCase(authToken, caseId, updatedCaseData, CaseEvent.CITIZEN_CASE_WITHDRAW);
     }
 
+    public Map<String, String> fetchIdamAmRoles(String authorisation, String emailId) {
+        return roleAssignmentService.fetchIdamAmRoles(authorisation, emailId);
+    }
 }
